vendor/tt-call/tests/ui/type-fn-arg-unexpected.stderr
error: no rules expected the token `@`
 --> tests/ui/type-fn-arg-unexpected.rs:5:19
  |
5 |     input = [{ fn(@) }]
  |                   ^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
