vendor/tt-call/tests/ui/type-fn-arg-unexpected.rs
use tt_call::{parse_type, tt_call};

tt_call! {
    macro = [{ parse_type }]
    input = [{ fn(@) }]
}

fn main() {}
